# lambda-rmi

./: LICENSE.txt  Makefile  README.markdown
api/: CMakeLists.txt  build.xml  ice-pom.xml.in  pom.xml.in
api/src/main/slice/: Sensor.ice
client-cpp/: CMakeLists.txt
client-cpp/src/main/cpp/: AsyncProcessor.cpp  FunctionalIceCallback.h  LambdaProcessor.cpp  SensorProcessor.h  SyncClient.cpp  SyncProcessor.cpp  main.cpp
server-scala/project/: build.properties
server-scala/project/plugins/: Plugins.scala
server-scala/project/plugins/project/: build.properties
server-scala/src/main/resources/: logback.xml
server-scala/src/main/scala/lambda_rmi/: App.scala  FakeAllSensors.scala  FakeSensor.scala  FakeSensors.scala  WeatherMan.scala
webapp-scala/: .gitignore
webapp-scala/project/: build.properties
webapp-scala/src/main/scala/bootstrap/liftweb/: Boot.scala
webapp-scala/src/main/scala/lambda_rmi/comet/: MapUpdater.scala
webapp-scala/src/main/scala/lambda_rmi/lib/: IceCallbackWrapper.scala  SensorReader.scala
webapp-scala/src/main/webapp/: index.html
webapp-scala/src/test/scala/lambda_rmi/: AppTest.scala
